deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Must match Liberty build config name!
  name: myemm-liberty
  namespace: mas-inst8809-manage
spec:
  selector:
    matchLabels:
      # App name
      app: myemm-liberty
  replicas: 1
  template:
    metadata:
      labels:
        # App name
        app: myemm-liberty
        deploymentconfig: myemm-liberty
        mas.ibm.com/appType: serverBundle
        # Instance name
        mas.ibm.com/instanceId: inst8809
    spec:
      containers:
        - name: myemm-liberty
          command:
            - /bin/bash
            - '-c'
            - '--'
          args:
            - >-
              ./config/getkey.sh && source ./config/setenv.sh &&
              /opt/ibm/wlp/bin/server run defaultServer
          # Registry/<manage namespace>/<app name>:latest
          image: >-
            image-registry.openshift-image-registry.svc:5000/mas-inst8809-manage/myemm-liberty:latest
          ports:
            - containerPort: 9080
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
          volumeMounts:
            - name: manage-truststore
              readOnly: true
              mountPath: /config/truststore
            - name: manage-public-certs
              readOnly: true
              mountPath: /etc/ssl/certs/public-manage-tls
            - name: internal-manage-tls
              readOnly: true
              mountPath: /etc/ssl/certs/internal-manage-tls
      volumes:
        - name: manage-truststore
          # Each volume seems to just be <instance name> + the rest of the name
          configMap:
            name: inst8809-masdev-truststore-cfg
            defaultMode: 420
        - name: manage-public-certs
          secret:
            secretName: inst8809-masdev-cert-public-81
            defaultMode: 420
        - name: internal-manage-tls
          secret:
            secretName: inst8809-internal-manage-tls
            defaultMode: 420
